--- a/templateHTML/templatehtml.html
+++ b/templateHTML/templatehtml.html
@@ -149,7 +149,8 @@
     </div>
     <div class="video-container">
       <center>
-        <iframe src="~URL~" width="720" height="464" marginwidth="0" marginheight="0" frameborder="no" scrolling="no"></iframe>
+        /*<iframe src="~URL~" width="720" height="464" marginwidth="0" marginheight="0" frameborder="no" scrolling="no"></iframe>*/
+	<object data="~URL~" width="720" height="464" marginwidth="0" marginheight="0" frameborder="no" scrolling="no"></object>
       </center>
     </div>
     <div id="why-hapyak">
